<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Android Maven</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="button1">Tab 1</string>
    <string name="button2">Tab 2</string>
    <string name="button3">Tab 3</string>
    <string name="button4">Tab 4</string>
    <string name="button5">Tab 5</string>
    <string name="hello_world">Hello World</string>
</resources>
